CHANGELOG
---------

- 2014/11/08: 0.0.3 release.
    - Upgrading to beta status
    - String-Unicode conversion to support Python 2 and 3, keeping to principal
      of least surprise with regards to behavior of strings
    - Supporting Python 3.4
    - Supporting Python 3.3
    - Supporting Python 3.2
    - Supporting Python 2.7
    - Node-formatting for node parsing
    - Automagic defaulting for MeCab library path and charset, but allowing for
      overriding with MECAB_PATH and MECAB_CHARSET
    - Tested on Windows XP (32-bit) and Windows 7 (64-bit)
    - Tested on Mac OS Yosemite (64-bit)
    - Tested on FreeBSD 10 (32-bit)

- 2014/10/26: 0.0.2 release.
    - work in progress

- 2014/10/24: Project inception, initial archiving on Bitbucket.
    - Initial archiving 
    - natto-py is to provide an easy-to-use Python binding with MeCab